--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "fetch": "^1.0.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
-    "serve-favicon": "~2.3.0"
+    "request": "^2.72.0",
+    "serve-favicon": "~2.3.0",
+    "sleep": "^3.0.1"
   }
 }
