--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "~1.13.2",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
@@ -15,6 +16,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
+    "mysql": "^2.10.2",
     "request": "^2.72.0",
     "serve-favicon": "~2.3.0",
     "sleep": "^3.0.1"
